<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/matchedUserLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/userNameLayout"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/matchedUserName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="50"
            android:gravity="center_vertical"
            android:textColor="#000000"
            android:textSize="24sp"
            tools:layout_marginLeft="20dp" />

        <ImageButton
            android:id="@+id/removeMatchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/remove_my_match_icon"
            android:contentDescription="@string/button_to_remove_a_match" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/chatProfileMapButtonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/chatButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/ic_baseline_chat"
            android:contentDescription="@string/my_message_button_description"/>

        <ImageButton
            android:id="@+id/profileButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/profile_fragment_icon"
            android:backgroundTint="@color/blindly_grey"
            android:contentDescription="@string/my_profile_button_description"/>

        <ImageButton
            android:id="@+id/mapButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="60dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/ic_baseline_location"
            android:contentDescription="@string/my_map_button_description"/>
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />
</LinearLayout>