<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_matches_recyler_view"
        android:layout_width="match_parent"
        android:layout_height="485dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonWeatherEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="30dp"
        app:borderWidth="1dp"
        android:clickable="true"
        android:contentDescription="@string/button_for_weather_and_event_page"
        android:focusable="true"
        app:backgroundTint="#FFFBFB"
        app:fabCustomSize="49dp"
        app:maxImageSize="40dp"
        app:rippleColor="@color/blindly_purple"
        app:srcCompat="@drawable/calendar_event_icon"
        app:tint="@null"
        app:useCompatPadding="false" />
</LinearLayout>