<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile_setup.ProfileBirthday">

    <ProgressBar
        android:id="@+id/progressBar_p3"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/progress_bar_height"
        android:progress="22" />

    <TextView
        android:id="@+id/text_p3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressBar_p3"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin_end"
        android:text="@string/my_birthday_is"
        android:textColor="#000000"
        android:textSize="36sp" />


    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:calendarViewShown="false"
        android:datePickerMode="spinner" />

    <TextView
        android:id="@+id/warning_p3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/datePicker"
        android:layout_marginTop="@dimen/margin"
        android:layout_alignStart="@id/datePicker"
        android:layout_alignEnd="@+id/datePicker"
        android:text="@string/the_minimum_age_requirement_is_18_years_old"
        android:textColor="#FF0000"
        android:visibility="invisible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_p3"
        android:layout_width="@dimen/pill_shape_width"
        android:layout_height="@dimen/pill_shape_height"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin"
        android:onClick="startProfileGender"
        android:text="@string/continue_str"
        app:shapeAppearanceOverlay="@style/PillShapeButton" />
</RelativeLayout>